fixed and more ui work

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,5 +1,5 @@
 <!--<h2>My First Angular 2 App</h2>
 <button type="button" (click)="writeIt()">Write It!</button>-->
-<div style="position:absolute; width:100%; height:100%; left: 0px; top: 0px; margin: 0px;">
     <config-bar></config-bar>
-</div>
+    <format-bar></format-bar>
+    <content-enter></content-enter>
