--- a/app/format-bar/format-bar.component.css
+++ b/app/format-bar/format-bar.component.css
@@ -1,15 +1,26 @@
-.topBar {
+.topBar, .topBarOuter {
     position: absolute;
     top: 0px;
     right: 0px;
-    height: 50px;
-    background-color: #FCFCFC;
+    height: 30px;
+    background-color: #E4E4E4;
+}
+.topBar {    
     box-shadow: 0px 2px 2px #222222;
-    z-index: 99998;
+    z-index: 997;
 }
 .topBar.opened {
-    width: calc(100% - 300px);
+    width: calc(100% - 350px);
 }
 .topBar.closed {
+    width: 100%;
+}
+.topBarOuter {
+    z-index: 999;
+}
+.topBarOuter.opened {
+    width: calc(100% - 350px);
+}
+.topBarOuter.closed {
     width: 100%;
 }
