got config options object set up and trying to start working on displaying it

--- a/app/config-bar/config-bar.component.html
+++ b/app/config-bar/config-bar.component.html
@@ -1,1 +1,5 @@
-<div class="sideBar"></div>
+<div class="sideBar">
+    <div *ngFor="let section in configOptions.options.sections">    
+        {{section.title}}
+    </div>
+</div>
