--- a/app/paper-back/paper-back.component.css
+++ b/app/paper-back/paper-back.component.css
@@ -1,9 +1,12 @@
 .paperBack {
-    position: absolute;
-    left: 25px;
-    right: 25px;
-    top: 25px;
-    min-height: calc(100% - 50px);
+    /*position: absolute;*/
+    margin-left: 25px;
+    /*margin-right: 25px;*/
+    width: calc(100% - 50px);
+    margin-top: 25px;
+    margin-bottom: 25px;
+    /*min-height: calc(100% - 50px);*/
+    min-height: 800px;
     background-color: #FFFFFF;
     box-shadow: 0px 0px 10px #222222;
 }
