--- a/app/config-bar/config-bar.component.css
+++ b/app/config-bar/config-bar.component.css
@@ -5,11 +5,21 @@
     margin: 0px;
     width: 350px;
     height: 100%;
-    background-color: #E4E4E4;
+    background-color: #F7F6F6;
     box-shadow: 2px 0px 2px #222222;
     z-index: 998;
     overflow-y: scroll;
 }
 .sectionTitle {
     font-family: "OpenSans", Helvetica, Arial, sans-serif;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #6E6E6E;
+    border-bottom: solid 3px #0595F5;
+    border-top: solid 3px #0595F5;
+    border-right: solid 3px #0595F5;
+    border-radius: 3px;
+    margin-bottom: 5px;
+    color: #FFFFFF;
 }
