--- a/app/format-bar/format-bar.component.css
+++ b/app/format-bar/format-bar.component.css
@@ -3,7 +3,7 @@
     top: 0px;
     right: 0px;
     height: 30px;
-    background-color: #E4E4E4;
+    background-color: #F7F6F6;
 }
 .topBar {    
     box-shadow: 0px 2px 2px #222222;
