--- a/app/config-bar/config-bar.component.html
+++ b/app/config-bar/config-bar.component.html
@@ -1,16 +1,14 @@
 <div class="sideBar">    
     <div class="innerWrapper">
-        <!--<i class="material-icons">face</i>-->
         <div *ngFor="#section of configOptions.options.sections">    
             <div class="sectionTitle">{{section.title}}</div>
             <div *ngFor="#field of section.fields">
-                <!--{{field.displayName}}-->
                 <div class="radioGroup" *ngIf="field.inputType == 'radio'">
                     <div class="fieldTitle">{{field.displayName}}</div>
                     <hr>
                     <div class="fieldOptions">
                         <ng-container *ngFor="#option of field.options">
-                            <input class="option" type="radio" [name]="field.name" [value]="option">{{option}}
+                            <input class="option" type="radio" [checked]="paperSettings[field.name] === option.name" [name]="field.name" (change)="paperSettings[field.name] = option.name">{{option.title}}
                             <br>
                         </ng-container>
                     </div>                
@@ -19,7 +17,7 @@
                     <div class="fieldTitle">{{field.displayName}}</div>
                     <hr>
                     <div class="fieldEnter">
-                        <input class="textInputField option" style="font-size: 12px !important; width: 170px !important;" type="text" [placeholder]="field.placeholder">
+                        <input (change)="addSection($event)" class="textInputField option" style="font-size: 12px !important; width: 170px !important;" type="text" [placeholder]="field.placeholder" [(ngModel)]="paperSettings[field.name]">
                     </div>
                 </div>
                 <div class="checkboxGroup" *ngIf="field.inputType == 'checkbox' && !field.reorderable">
@@ -27,7 +25,7 @@
                     <hr>
                     <div class="fieldOptions">
                         <ng-container *ngFor="#option of field.options">
-                            <input class="option" type="checkbox" [value]="option">{{option}}
+                            <input class="option" type="checkbox" [value]="paperSettings[option.name]">{{option.title}}
                             <br>
                         </ng-container>
                     </div>
@@ -39,10 +37,12 @@
                         <table class="radioTable">
                             <tr *ngFor="#option of field.options">
                                 <td class="radioCell">
-                                    <input type="radio" [name]="field.name" [value]="option.title">{{option.title}}
+                                    <input type="radio" [name]="field.name" [checked]="paperSettings[field.name] === option.name" (change)="paperSettings[field.name] = option.name">{{option.title}}
                                 </td>
                                 <td>
-                                    <input class="textInputField" style="font-size: 12px !important; width: 170px !important;" type="text" *ngIf="option.type == 'text'" placeholder="Enter {{option.title}} here...">
+                                    <ng-container *ngIf="paperSettings[field.name] === option.name">
+                                        <input class="textInputField" style="font-size: 12px !important; width: 170px !important;" type="text" *ngIf="option.type == 'text'" [(ngModel)]="paperSettings[field.name + 'Input']" placeholder="Enter {{option.title}} here...">
+                                    </ng-container>
                                 </td>
                             </tr>
                         </table>
@@ -52,7 +52,7 @@
                     <div class="fieldTitle">{{field.displayName}}</div>
                     <hr>
                     <div class="fieldOptions">
-                        <input type="checkbox" [value]="field.displayName">{{field.optionName}}
+                        <input type="checkbox" [(ngModel)]="paperSettings[field.name]">{{field.optionName}}
                     </div>
                 </div>
                 <div class="toggleOption" *ngIf="field.inputType == 'toggleInput'">
@@ -62,10 +62,10 @@
                         <table class="radioTable">
                             <tr *ngFor="#option of field.options">
                                 <td class="radioCell">
-                                    <input type="checkbox" [value]="option.title">{{option.title}}
+                                    <input type="checkbox" [(ngModel)]="paperSettings[field.name]">{{option.title}}
                                 </td>
                                 <td>
-                                    <input class="textInputField" style="font-size: 12px !important; width: 170px !important;" type="text" *ngIf="option.type == 'text'" [placeholder]="option.placeholder">
+                                    <input class="textInputField" [(ngModel)]="paperSettings[field.name + 'Input']" style="font-size: 12px !important; width: 170px !important;" type="text" *ngIf="option.type == 'text'" [placeholder]="option.placeholder">
                                 </td>
                             </tr>
                         </table>
@@ -77,7 +77,7 @@
                     <div class="fieldOptions">
                         <ng-container *ngFor="#newField of field.fields">
                             <div class="fieldOptions" *ngIf="newField.inputType == 'toggle'">
-                                <input class="option" type="checkbox" [value]="field.name">{{newField.displayName}}
+                                <input class="option" type="checkbox" [(ngModel)]="newField.name">{{newField.displayName}}
                             </div>
                             <div *ngIf="newField.inputType == 'radioInput'">
                                 <div class="fieldTitle">{{newField.displayName}}</div>
@@ -86,10 +86,10 @@
                                     <table class="radioTable">
                                         <tr *ngFor="#option of newField.options">
                                             <td class="radioCell">
-                                                <input type="radio" [name]="newField.name" [value]="option.title">{{option.title}}
+                                                <input type="radio" [name]="newField.name" [checked]="paperSettings[newField.name] === option.name" (change)="paperSettings[newField.name] = option.name">{{option.title}}
                                             </td>
                                             <td>
-                                                <input class="textInputField" style="font-size: 12px !important; width: 170px !important;" type="text" *ngIf="option.type == 'text'" placeholder="Enter {{option.title}} here...">
+                                                <input class="textInputField" style="font-size: 12px !important; width: 170px !important;" type="text" *ngIf="option.type == 'text'" [(ngModel)]="paperSettings[option.name + 'Input']" placeholder="Enter {{option.title}} here...">
                                             </td>
                                         </tr>
                                     </table>
@@ -100,7 +100,7 @@
                 </div>                
             </div>
             <div>
-                <input class="defaultButton" type="button" value="{{apaMla}} Default">
+                <input class="defaultButton" type="button" value="{{paperSettings.apaMla === 'apa' ? 'APA' : 'MLA'}} Default">
             </div>
         </div>
     </div>
