--- a/app/config-bar/config-bar.component.html
+++ b/app/config-bar/config-bar.component.html
@@ -25,7 +25,7 @@
                     <hr>
                     <div class="fieldOptions">
                         <ng-container *ngFor="#option of field.options">
-                            <input class="option" type="checkbox" [value]="paperSettings[option.name]">{{option.title}}
+                            <input class="option" type="checkbox" [checked]="paperSettings[option.name]" (change)="paperSettings[option.name] = !paperSettings[option.name]">{{option.title}}
                             <br>
                         </ng-container>
                     </div>
@@ -52,7 +52,7 @@
                     <div class="fieldTitle">{{field.displayName}}</div>
                     <hr>
                     <div class="fieldOptions">
-                        <input type="checkbox" [(ngModel)]="paperSettings[field.name]">{{field.optionName}}
+                        <input type="checkbox" [checked]="paperSettings[field.name]" (change)="paperSettings[field.name] = !paperSettings[field.name]">{{field.optionName}}
                     </div>
                 </div>
                 <div class="toggleOption" *ngIf="field.inputType == 'toggleInput'">
@@ -77,7 +77,7 @@
                     <div class="fieldOptions">
                         <ng-container *ngFor="#newField of field.fields">
                             <div class="fieldOptions" *ngIf="newField.inputType == 'toggle'">
-                                <input class="option" type="checkbox" [(ngModel)]="newField.name">{{newField.displayName}}
+                                <input class="option" type="checkbox" [checked]="paperSettings[newField.name]" (change)="paperSettings[newField.name] = !paperSettings[newField.name]">{{newField.displayName}}
                             </div>
                             <div *ngIf="newField.inputType == 'radioInput'">
                                 <div class="fieldTitle">{{newField.displayName}}</div>
