--- a/app/paper-back/paper-back.component.html
+++ b/app/paper-back/paper-back.component.html
@@ -1,1 +1,63 @@
-<div class="paperBack"></div>
+<div class="paperBack">
+	<div class="labelLabel">
+		Section Label
+	</div>
+	<div class="firstLabelWrap">
+		<div contenteditable="true" class="labelEnter" id="editting"></div>
+		<div class="labelOptions">
+			...
+		</div>
+	</div>
+	<div class="contentLabel">
+		Paragraph
+	</div>
+	<div class="contentOptions">
+		...
+	</div>
+	<div class="contentEnterWrap">
+		<p contenteditable="true" class="contentEnter" id="editting">H<em>el</em>lo</p>		
+	</div>
+	
+
+
+	<div class="labelLabel">
+		Section Label
+	</div>
+	<div class="labelWrap">
+		<div contenteditable="true" class="labelEnter" id="editting"></div>
+		<div class="labelOptions">
+			...
+		</div>
+	</div>
+	<div class="contentLabel">
+		Paragraph
+	</div>
+	<div class="contentOptions">
+		...
+	</div>
+	<div class="contentEnterWrap">
+		<p contenteditable="true" class="contentEnter"  id="editting">H<em>el</em>lo</p>		
+	</div>
+
+
+
+
+	<div class="labelLabel">
+		Section Label
+	</div>
+	<div class="labelWrap">
+		<div contenteditable="true" class="labelEnter" id="editting"></div>
+		<div class="labelOptions">
+			...
+		</div>
+	</div>
+	<div class="contentLabel">
+		Paragraph
+	</div>
+	<div class="contentOptions">
+		...
+	</div>
+	<div class="contentEnterWrap">
+		<p contenteditable="true" class="contentEnter"  id="editting">H<em>el</em>lo</p>		
+	</div>
+</div>
