--- a/app/paper-back/paper-back.component.css
+++ b/app/paper-back/paper-back.component.css
@@ -2,11 +2,107 @@
     /*position: absolute;*/
     margin-left: 25px;
     /*margin-right: 25px;*/
-    width: calc(100% - 50px);
-    margin-top: 25px;
+    width: calc(100% - 90px);
+    margin-top: 5px;
     margin-bottom: 25px;
     /*min-height: calc(100% - 50px);*/
     min-height: 800px;
     background-color: #FFFFFF;
     box-shadow: 0px 0px 10px #222222;
+    padding: 20px;
+}
+
+.labelLabel {
+    float: left; 
+    font-size: 12px; 
+    padding-right: 5px; 
+    margin-bottom: -15px; 
+    padding-bottom: 0px; 
+    font-family: 'OpenSans', Helvetica, Arial, sans-serif; 
+    color: #FFFFFF;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px; 
+    background-color: #6E6E6E; 
+    padding-left: 4px; 
+    padding-right: 4px; 
+    padding-bottom: 2px; 
+    padding-top: 2px;
+    margin-top: 30px;
+}
+
+.labelEnter {
+    float: left; 
+    min-width: 200px; 
+    border: solid 1px rgba(0, 0, 0, 0.2); 
+    border-radius: 2px;
+}
+
+.labelOptions {
+    float: left; 
+    padding-top: 2px; 
+    padding-left: 3px; 
+    padding-right: 3px; 
+    background-color: #6E6E6E; 
+    color: #FFFFFF; 
+    border-radius: 3px;
+}
+
+.contentLabel {
+    text-align: right; 
+    font-size: 12px; 
+    padding-right: 5px; 
+    margin-bottom: -15px; 
+    padding-bottom: 0px; 
+    font-family: 'OpenSans', Helvetica, Arial, sans-serif; 
+    color: #FFFFFF;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px; 
+    background-color: #6E6E6E; 
+    float: right; 
+    padding-left: 4px; 
+    padding-right: 4px; 
+    padding-bottom: 2px; 
+    padding-top: 2px;
+    margin-top: 18px; 
+    margin-right: 20px;
+}
+
+.contentOptions {
+    float: right; 
+    padding-top: 2px; 
+    padding-left: 3px; 
+    padding-right: 3px; 
+    background-color: #6E6E6E; 
+    color: #FFFFFF; 
+    border-radius: 3px; 
+    margin-top: 35px; 
+    margin-right: -83px;
+}
+
+.firstLabelWrap {
+    margin-top: 47px;
+}
+
+.labelWrap {
+    margin-top: 63px;
+}
+
+.contentEnterWrap {
+    padding-top: 19px; 
+    width: calc(100% - 20px);
+}
+
+.contentEnter {
+    height:100px; 
+    border: solid 1px rgba(0, 0, 0, 0.2); 
+    border-radius: 2px;
+}
+
+.labelOptions:hover, .contentOptions:hover {
+    background-color: #555555;
+    cursor: pointer;
+}
+
+.labelOptions:active, .contentOptions:active {
+    background-color: #444444;
 }
