--- a/app/content-enter/content-enter.component.css
+++ b/app/content-enter/content-enter.component.css
@@ -147,3 +147,30 @@
 .labelOptions:active, .contentOptions:active {
     background-color: #444444;
 }
+
+.titleInfoWrap {
+    margin-top: 40px;
+    padding-top: 17px;
+}
+
+.titleLabelLabel {
+    float: left; 
+    font-size: 12px; 
+    padding-right: 5px; 
+    margin-bottom: -15px; 
+    padding-bottom: 0px; 
+    font-family: 'OpenSans', Helvetica, Arial, sans-serif; 
+    color: #FFFFFF;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px; 
+    background-color: #6E6E6E; 
+    padding-left: 4px; 
+    padding-right: 4px; 
+    padding-bottom: 2px; 
+    padding-top: 2px;
+    margin-top: 0px;
+}
+
+.titlePageWrap {
+    padding-top: 130px;
+}
