--- a/app/content-enter/content-enter.component.css
+++ b/app/content-enter/content-enter.component.css
@@ -40,13 +40,12 @@
 }
 
 .paperBack {
-    /*position: absolute;*/
-    margin-left: 25px;
-    /*margin-right: 25px;*/
     width: calc(100% - 90px);
+    min-width: 360px;
+    margin: auto;
     margin-top: 5px;
     margin-bottom: 25px;
-    /*min-height: calc(100% - 50px);*/
+    width: 650px;
     min-height: 800px;
     background-color: #FFFFFF;
     box-shadow: 0px 0px 10px #222222;
